--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 #This Project
-*.psd
-*.class
+*.psd # Up to you whether you want to share your psd files.
+*.dll # Don't want compiled binaries, we only need to share the source code.
 
 # JetBrains
 .idea/
