--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 #This Project
 *.psd # Up to you whether you want to share your psd files.
 *.dll # Don't want compiled binaries, we only need to share the source code.
+*.pdb
 
 # JetBrains
 .idea/
